# my_bot

./: .gitignore  CMakeLists.txt  README.md  adibot_map.rviz  requirements.txt
adibot/: README.md  package.xml
adibot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro
adibot/launch/: launch_sim.launch.py  rsp.launch.py
adibot_follower/: CMakeLists.txt  README.md  package.xml
adibot_follower/config/: cluttered.map.pgm  cluttered.map.yaml  follower_params.yaml  obstacles.yaml  target_bridge.yaml
adibot_follower/docs/: known_issues.md
adibot_follower/include/adibot_follower/: a_star.hpp  pure_pursuit.hpp
adibot_follower/launch/: follow.launch.py  follow_predicted.launch.py  plan_to_goal.launch.py  spawn_target.launch.py
adibot_follower/scripts/: gen_world.py
adibot_follower/src/: global_planner.cpp  map_loader.cpp  pure_pursuit.cpp  target_driver.cpp  target_predictor.cpp
adibot_follower/test/: test_a_star.cpp  test_pure_pursuit.cpp
adibot_follower/worlds/: cluttered.sdf
adibot_rl/: package.xml  setup.cfg  setup.py
config/: gz_bridge.yaml
description/: robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py
rviz/: urdf_config.rviz
worlds/: empty.sdf  my_world.sdf
